force-app/main/default/objects/Product_Collateral__c/Product_Collateral__c.object-meta.XML
<CustomObject>
    <label>Product Collateral</label>
    <nameField>
        <label>Product Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>