force-app/main/default/objects/Product_Collateral__c/fields/Collateral_Description__c.field-meta.xml
<CustomField>
		<fullName>Collateral_Description__c</fullName>
        <label>Collateral Description</label>
        <length>255</length>
        <type>Text</type>
</CustomField>