force-app/main/default/objects/Product_Collateral__c/fields/Collateral_Identification__c.field-meta.xml
<CustomField>
		<fullName>Collateral_Identification__c</fullName>
        <label>Collateral Identification</label>
        <length>255</length>
        <type>Text</type>
</CustomField>