force-app/main/default/objects/Product_Collateral__c/fields/Collateral_Make_Model__c.field-meta.xml
<CustomField>
		<fullName>Collateral_Make_Model__c</fullName>
        <label>Collateral Make/Model</label>
        <length>255</length>
        <type>Text</type>
</CustomField>