force-app/main/default/objects/Product_Collateral__c/fields/Collateral_Value__c.field-meta.xml
<CustomField>
		<fullName>Collateral_Value__c</fullName>
        <label>Collateral Value</label>
        <length>50</length>
        <type>Text</type>
</CustomField>