force-app/main/default/objects/Product_Collateral__c/fields/Original_Lender_Dealer__c.field-meta.xml
<CustomField>
		<fullName>Original_Lender_Dealer__c</fullName>
        <label>Original Lender/Dealer</label>
        <length>255</length>
        <type>Text</type>
</CustomField>