force-app/main/default/objects/Product_Collateral__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
		<fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
</CustomField>