force-app/main/default/objects/Product_Collateral__c/fields/Product__c.field-meta.xml
<CustomField>
		<fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Collaterals</relationshipLabel>
        <relationshipName>Product_Collaterals</relationshipName>
        <type>Lookup</type>
</CustomField>