force-app/main/default/objects/Product_Collateral__c/fields/Repossession_Return_Date__c.field-meta.xml
<CustomField>
		<fullName>Repossession_Return_Date__c</fullName>
        <label>Repossession/Return Date</label>
        <type>Date</type>
</CustomField>