force-app/main/default/objects/Product_Collateral__c/fields/Repossession_Return_Proceeds__c.field-meta.xml
<CustomField>
		<fullName>Repossession_Return_Proceeds__c</fullName>
        <label>Repossession/Return Proceeds</label>
        <length>50</length>
        <type>Text</type>
</CustomField>