force-app/main/default/objects/Product_Collateral__c/fields/Security_Registration_Date__c.field-meta.xml
<CustomField>
		<fullName>Security_Registration_Date__c</fullName>
        <label>Security Registration Date</label>
        <type>Date</type>
</CustomField>