force-app/main/default/objects/Product_Collateral__c/fields/Security_Registration_Number__c.field-meta.xml
<CustomField>
		<fullName>Security_Registration_Number__c</fullName>
        <label>Security Registration Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
</CustomField>